--- a/Starter/films/templates/registration/register.html
+++ b/Starter/films/templates/registration/register.html
@@ -11,8 +11,8 @@
         <div class="form-group mb-3">
             <label>{{ form.username.label_tag }}</label>
             {{ form.username.errors }}
-            {% render_field form.username class="form-control" hx-post="/check_username" hx-trigger=keyup" hx-target="#username-error"%}
-            <div id="username-error"></div>
+            {% render_field form.username hx-post="/check-username/" hx-swap="outerHTML" hx-target="#username-err" hx-trigger="keyup throttle:500ms changed" class="form-control" %}
+            <div id="username-err"></div>
 
             <label>{{ form.password1.label_tag }}</label>
             {{ form.password1.errors }}
