--- a/App/films/templates/partials/task-list.html
+++ b/App/films/templates/partials/task-list.html
@@ -1,7 +1,7 @@
 {% if tasks %}
 <ul class="list-group col-4">
     {% for task in tasks %}
-    <li class="list-group-item d-flex justify-content-between align-items-center"> {{ task.taskname }}</li>
+    <li class="list-group-item d-flex justify-content-between align-items-center"> {{ task.taskName }}</li>
     {% endfor %}
 </ul>
 {% else %}
