--- a/App/films/templates/partials/task-list.html
+++ b/App/films/templates/partials/task-list.html
@@ -1,7 +1,24 @@
+{% if messages %}
+<ul class="messages" hx-get="{% url 'clear' %}" hx-trigger="load delay:3s">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+
+
 {% if tasks %}
-<ul class="list-group col-4">
+{% csrf_token %}
+<ul class="list-group col-xs-12">
     {% for task in tasks %}
-    <li class="list-group-item d-flex justify-content-between align-items-center"> {{ task.taskName }}</li>
+    <li class="list-group-item d-flex justify-content-between align-items-center"> 
+        {{ task.taskName }}
+        <span class="badge badge-danger badge-pill" 
+        style="cursor: pointer;" 
+        hx-delete="{% url 'delete-task' task.pk %}" 
+        hx-target="#task-list" 
+        hx-confirm="Are you sure you want to delete this task?">X</span>
+    </li>
     {% endfor %}
 </ul>
 {% else %}
