--- a/App/films/templates/partials/task-list.html
+++ b/App/films/templates/partials/task-list.html
@@ -1,42 +1,50 @@
-{% if messages %}
-<ul class="messages" hx-get="{% url 'clear' %}" hx-trigger="load delay:3s">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
+<div class="d-flex justify-content-between">
+    <section class="col-6">
+        {% if messages %}
+        <ul class="messages" hx-get="{% url 'clear' %}" hx-trigger="load delay:3s">
+            {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+                {% endfor %}
+        </ul>
+        {% endif %}
 
 
-{% if tasks %}
-{% csrf_token %}
-<ul class="list-group col-xs-12">
-    {% for task in tasks %}
-    <li class="list-group-item d-flex justify-content-between align-items-center"> 
-        {{ task.taskName }}
-        <span class="badge badge-danger badge-pill" 
-        style="cursor: pointer;" 
-        hx-delete="{% url 'delete-task' task.pk %}" 
-        hx-target="#task-list" 
-        hx-confirm="Are you sure you want to delete this task?">X</span>
-    </li>
-    {% endfor %}
-</ul>
-{% else %}
-<p>There are no current tasks</p>
-{% endif %}
+        {% if tasks %}
 
 
+        {% csrf_token %}
+        <form class="sortable list-group" hx-trigger="end" hx-post="{% url 'sort' %}" hx-target="#task-list">
+            <div class="htmx-indicator">Updating...</div>
+            {% for task in tasks %}
+            <div>
+                <input type="hidden" name="task_order" value="{{ task.pk }}" />
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    #{{task.order}} {{ task.task.name }}
+                    <span class="badge badge-danger badge-pill" 
+                        style="cursor: pointer;"
+                        hx-delete="{% url 'delete-task' task.pk %}"
+                        hx-target="#task-list"
+                        hx-confirm="Are you sure you wish to delete?">X</span>
+                </li>
+            </div>
+        {% endfor %}
+        </form>
 
-<section class="col-4 offset-1">
-    {% include 'partials/search.html' %}
-</section>
+
+        
+        {% else %}
+        <p>There are no current tasks</p>
+        {% endif %}
+
+    </section>
+
+
+    <section class="col-4 offset-1">
+        {% include 'partials/search.html' %}
+    </section>
 </div>
 
 {% if request.method == 'POST' %}
-<input type="text"
-    hx-swap-oob="true"
-    id="filmname-input"
-    name="filmname" 
-    class="form-control-sm mr-2" 
+<input type="text" hx-swap-oob="true" id="filmname-input" name="filmname" class="form-control-sm mr-2"
     placeholder="Enter a film" />
 {% endif %}
