--- a/App/films/templates/tasks.html
+++ b/App/films/templates/tasks.html
@@ -8,7 +8,7 @@
             {% csrf_token %}
             <input type="text" 
                 id="taskname-input"
-                name="taskname" 
+                name="taskName" 
                 class="form-control-sm mr-2" 
                 placeholder="Enter a task" />
             <button type="submit" class="btn btn-success btn-sm">Add Task</button>
