--- a/App/films/templates/partials/task-list.html
+++ b/App/films/templates/partials/task-list.html
@@ -13,13 +13,13 @@
 
 
         {% csrf_token %}
-        <form class="sortable list-group" hx-trigger="end" hx-post="/sort" hx-target="#task-list">
+        <form class="sortable list-group" hx-trigger="end" hx-post="{% url 'sort' %}" hx-target="#task-list">
             <div class="htmx-indicator">Updating...</div>
             {% for task in tasks %}
             <div>
                 <input type="hidden" name="task_order" value="{{ task.pk }}" />
                 <li class="list-group-item d-flex justify-content-between align-items-center">
-                    #{{task.order}} {{ task.taskName }}
+                    #{{task.order}} {{ task.task.taskName }}
                     <span class="badge badge-danger badge-pill" 
                         style="cursor: pointer;"
                         hx-delete="{% url 'delete-task' task.pk %}"
