--- a/App/films/templates/partials/search-results.html
+++ b/App/films/templates/partials/search-results.html
@@ -4,10 +4,10 @@
     <ul class="list-group col-xs-12">
     {% for task in results %}
         <li class="list-group-item d-flex justify-content-between align-items-center">
-            {{ task.name }}
+            {{ task.taskName }}
             <span class="badge badge-success badge-pill" 
                 style="cursor: pointer;"
-                hx-post="{% url 'add-film' %}"
+                hx-post="{% url 'add-task' %}"
                 hx-vals='{"taskname": "{{task.taskName}}"}'
                 hx-target="#task-list">add</span>
         </li>
