--- a/App/films/templates/partials/task-list.html
+++ b/App/films/templates/partials/task-list.html
@@ -19,7 +19,9 @@
             <div>
                 <input type="hidden" name="task_order" value="{{ task.pk }}" />
                 <li class="list-group-item d-flex justify-content-between align-items-center">
+                    <a hx-get="{%url 'detail' task.pk %}" hx-target="#task-list">
                     #{{task.order}} {{ task.task.taskName }}
+                </a>
                     <span class="badge badge-danger badge-pill" 
                         style="cursor: pointer;"
                         hx-delete="{% url 'delete-task' task.pk %}"
