--- a/App/films/templates/partials/task-list.html
+++ b/App/films/templates/partials/task-list.html
@@ -15,24 +15,10 @@
         {% csrf_token %}
         <form class="sortable list-group" hx-trigger="end" hx-post="{% url 'sort' %}" hx-target="#task-list">
             <div class="htmx-indicator">Updating...</div>
-            {% for task in tasks %}
-            <div>
-                <input type="hidden" name="task_order" value="{{ task.pk }}" />
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <a hx-get="{%url 'detail' task.pk %}" hx-target="#task-list">
-                    #{{task.order}} {{ task.task.taskName }}
-                </a>
-                    <span class="badge badge-danger badge-pill" 
-                        style="cursor: pointer;"
-                        hx-delete="{% url 'delete-task' task.pk %}"
-                        hx-target="#task-list"
-                        hx-confirm="Are you sure you wish to delete?">X</span>
-                </li>
-            </div>
-        {% endfor %}
+            
         </form>
 
-
+        {% include 'partials/task-list-element.html' with tasks=tasks %}
         
         {% else %}
         <p>There are no current tasks</p>
