--- a/App/films/templates/partials/navbar.html
+++ b/App/films/templates/partials/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="{% url 'index' %}">Movie List App</a>
+    <a class="navbar-brand" href="{% url 'index' %}">Open Books</a>
 
     <div id="navbarNav">
         <ul class="navbar-nav ml-auto">
