--- a/App/films/templates/partials/navbar.html
+++ b/App/films/templates/partials/navbar.html
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="#">TaskManager</a>
+        <a class="navbar-brand" href="{% url 'index' %}">Open Books</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Tasks</a>
+                    <a class="nav-link" href="{% url 'tasks' %}">Tasks</a>
                 </li>
             </ul>
             <ul class="navbar-nav ms-auto d-flex align-items-right">
