--- a/App/films/templates/partials/navbar.html
+++ b/App/films/templates/partials/navbar.html
@@ -15,8 +15,17 @@
                     <li class="nav-item">
                         <span class="navbar-text me-3">Welcome, {{ user.username }}</span>
                     </li>
+                    <!--
+                    
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                    </li>
+--->
+                    <li class="nav-item">
+                        <form method="post" action="{% url 'logout' %}" class="d-inline">
+                            {% csrf_token %}
+                            <button type="submit" class="nav-link btn btn-link" style="border: none; background: none;">Logout</button>
+                        </form>
                     </li>
                 {% else %}
                     <li class="nav-item">
